--- a/css/layout.css
+++ b/css/layout.css
@@ -201,19 +201,19 @@ ul#nav li.current a { color: #F06000; }
 
 #about h1 {
    font: 30px/40px 'opensans', sans-serif;
-   /*color: #fff;*/
+   color: #fff;
    margin-bottom: 12px;
 }
 
 #about .name {
    font: 30px/40px 'librebaskerville-italic', sans-serif;
-   /*color: #fff;*/
+   color: #fff;
    margin-bottom: 12px;
 }
 
 #about h2 {
    font: 22px/30px 'opensans-bold', sans-serif;
-   /*color: #fff;*/
+   color: #fff;
    margin-bottom: 12px;
 }
 
