--- a/css/layout.css
+++ b/css/layout.css
@@ -189,7 +189,7 @@ ul#nav li.current a { color: #F06000; }
 /* ------------------------------------------------------------------ */
 
 #about {
-   /*background: #2B2B2B;*/
+   background: #2B2B2B;
    padding-top: 76px;
   
    overflow: hidden;
