--- a/css/layout.css
+++ b/css/layout.css
@@ -213,7 +213,7 @@ ul#nav li.current a { color: #F06000; }
 
 #about h2 {
    font: 22px/30px 'opensans-bold', sans-serif;
-   color: #fff;
+   /*color: #fff;*/
    margin-bottom: 12px;
 }
 
