--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ h1 {
 |----------------------------------------------------------------------------
 */
 #skills .skill-line {
-  background: #3c4348;
+  background: blue;
   color: #fff;
   padding: 5px 5px;
 }
