--- a/css/layout.css
+++ b/css/layout.css
@@ -142,7 +142,7 @@ header .scrolldown a:hover { color: #11ABB0; }
    left: 0;
    top: 0;
 }
-.opaque { background-color: #444; }
+.opaque { background-color: blue; }
 
 /* hide toggle button */
 #nav-wrap > a.mobile-btn { display: none; }
