--- a/css/layout.css
+++ b/css/layout.css
@@ -265,7 +265,7 @@ ul#nav li.current a { color: #F06000; }
 #about .main-col { padding-right: 5%; }
 #about .download .button {
    margin-top: 6px;
-   background: #444;
+   background: blue;
    width: 100%;
 }
 #about .download .button:hover {
