--- a/css/layout.css
+++ b/css/layout.css
@@ -264,9 +264,9 @@ ul#nav li.current a { color: #F06000; }
 }
 #about .main-col { padding-right: 5%; }
 #about .download .button {
-   margin-top: 6px;
+   /*margin-top: 6px;
    background: blue;
-   width: 100%;
+   width: 100%;*/
 }
 #about .download .button:hover {
    background: #fff;
